--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "axios": "^0.16.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babelify": "^7.3.0",
@@ -17,6 +18,7 @@
     "es6-object-assign": "^1.1.0",
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.1",
+    "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
     "gulp-htmlmin": "^1.3.0",
@@ -25,6 +27,7 @@
     "gulp-minify": "0.0.5",
     "gulp-minify-css": "^1.2.3",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "immutable": "^3.8.1",
