--- a/package.json
+++ b/package.json
@@ -51,7 +51,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "reactjs"
+    "reactjs",
+    "redux",
+    "immutable",
+    "react-router",
+    "react-validation",
+    "sweetalert2",
+    "gulp"
   ],
   "author": "Alex Chen",
   "license": "ISC"
